<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/felhocske"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/napocska"/>

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:hint="@string/string_username"/>
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/string_password"/>
    <EditText
        android:id="@+id/editText_confirm_password"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/string_confirm_password"/>
    <EditText
        android:id="@+id/editTtext_fullname"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/string_full_name"/>
    <EditText
        android:id="@+id/eddiText_email"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/string_email"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="#eaf12a"
        android:text="@string/string_register"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/string_already_registered"/>
        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#086ef2"
            android:text="@string/string_login"/>
    </LinearLayout>

</LinearLayout>