<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/felhocske"
    android:gravity="center_horizontal">


    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="297dp"

        app:srcCompat="@drawable/logo2" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-25dp">



        <ImageView
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@drawable/username"
            android:layout_marginRight="2dp"/>

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/edittext"
            android:padding="5dp"
            android:gravity="center"
            android:hint="@string/string_username"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/pw"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:padding="5dp"
            android:gravity="center"
            android:hint="@string/string_password"/>


    </LinearLayout>


    <Button
        android:id="@+id/button_login"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:backgroundTint="@color/yellow"
        android:text="@string/string_login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/string_not_registered"/>
        <TextView
            android:id="@+id/textView_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#086ef2"
            android:text="@string/string_register"/>
    </LinearLayout>

</LinearLayout>